# aprsd

./: .coveragerc  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CONTRIBUTING.md  ChangeLog  ChangeLog.md  ChangeLog.rst  Dockerfile  Dockerfile-dev  INSTALL.txt  Makefile  PLUGINS.md  README.md  README.rst  aprsd-lnav.json  aprsd.py  dev-requirements.in  dev-requirements.txt  docker-compose.yml  fuzzyclock.py  gray.conf  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements-py2.txt  tox.ini
.github/workflows/: authors.yml  codeql.yml  docker-multiarch-tag.yml  docker.yml  manual_build.yml  master-build.yml  python.yml  release_build.yml
aprsd/: __init__.py  admin_web.py  aprsd.py  cli_helper.py  client.py  config.py  dev.py  email.py  exception.py  fake_aprs.py  flask.py  fuzzyclock.py  healthcheck.py  kissclient.py  listen.py  log.py  main.py  messaging.py  objectstore.py  packets.py  plugin.py  plugin_utils.py  rpc_server.py  service.py  stats.py  threads.py  trace.py  utils.py  weather.py  wsgi.py
aprsd/client/: __init__.py  aprsis.py  base.py  client.py  factory.py  fake.py  kiss.py  stats.py
aprsd/client/drivers/: __init__.py  aprsis.py  fake.py  kiss.py  kiss_common.py  registry.py  serialkiss.py  tcpkiss.py
aprsd/client/drivers/lib/: aprslib.py
aprsd/clients/: aprsis.py  fake.py  kiss.py
aprsd/cmds/: admin.py  completion.py  dev.py  export_config.py  export_plugins.py  fetch_stats.py  healthcheck.py  list_plugins.py  listen.py  send_message.py  server.py  webchat.py
aprsd/conf/: __init__.py  client.py  common.py  log.py  opts.py  plugin_common.py  plugin_email.py
aprsd/log/: log.py  rich.py
aprsd/logging/: log.py  logging.py  rich.py
aprsd/packets/: __init__.py  collector.py  core.py  dupe_filter.py  filter.py  log.py  packet_list.py  seen_list.py  tracker.py  watch_list.py
aprsd/packets/filters/: dupe_filter.py  packet_type.py
aprsd/plugins/: email.py  fortune.py  location.py  nearest.py  notify.py  ping.py  query.py  stock.py  time.py  version.py  weather.py
aprsd/rpc/: __init__.py  client.py  server.py
aprsd/stats/: __init__.py  app.py  collector.py
aprsd/threads/: __init__.py  aprsd.py  keep_alive.py  keepalive.py  keepalive_collector.py  log_monitor.py  registry.py  rx.py  service.py  stats.py  tx.py
aprsd/utils/: __init__.py  config_converter.py  counter.py  fuzzyclock.py  json.py  keepalive_collector.py  objectstore.py  package.py  ring_buffer.py  trace.py
aprsd/web/admin/static/css/: index.css  prism.css
aprsd/web/admin/static/js/: charts.js  echarts.js  logs.js  main.js  prism.js  send-message.js  tabs.js
aprsd/web/admin/templates/: index.html  messages.html
aprsd/web/chat/static/css/: chat.css  index.css  style.css.map  tabs.css
aprsd/web/chat/static/css/upstream/: google-fonts.css  jquery.toast.css  semantic.min.css
aprsd/web/chat/static/js/: gps.js  main.js  send-message-mobile.js  send-message.js
aprsd/web/chat/templates/: index.html  mobile.html
aprsd/web/static/css/: index.css
aprsd/web/static/js/: charts.js  main.js  prism.js  send-message.js
aprsd/web/templates/: index.html  send-message.html
docker/: Dockerfile  Dockerfile-dev  build.sh  docker-compose.yml
docs/: aprsd.drawio  builtin_plugins.rst  changelog.rst  clean_docs.py  conf.py  configure.rst  extension.rst  fix_readme_rst.py  index.rst  listen.rst  plugin.rst  readme.rst  requirements.txt  server.rst
docs/apidoc/: aprsd.client.drivers.lib.rst  aprsd.client.drivers.rst  aprsd.client.rst  aprsd.clients.rst  aprsd.cmds.rst  aprsd.conf.rst  aprsd.log.rst  aprsd.logging.rst  aprsd.packets.filters.rst  aprsd.packets.rst  aprsd.plugins.rst  aprsd.rpc.rst  aprsd.rst  aprsd.stats.rst  aprsd.threads.rst  aprsd.utils.rst  aprsd.web.admin.rst  aprsd.web.rst  modules.rst
docs/source/: builtin_plugins.rst  conf.py  configure.rst  extension.rst  install.rst  listen.rst  readme.rst  server.rst
docs/source/apidoc/: aprsd.client.drivers.lib.rst  aprsd.client.drivers.rst  aprsd.client.rst  aprsd.cmds.rst  aprsd.conf.rst  aprsd.log.rst  aprsd.packets.filters.rst  aprsd.packets.rst  aprsd.plugins.rst  aprsd.rst  aprsd.stats.rst  aprsd.threads.rst  aprsd.utils.rst
docs/superpowers/plans/: 2026-03-24-daemon-threads-event-refactor.md  2026-05-21-aprs-chat-bulletin.md
docs/superpowers/specs/: 2026-03-24-daemon-threads-event-refactor-design.md  2026-05-21-aprs-chat-bulletin-design.md
examples/plugins/: example_plugin.py
tests/: fake.py  mock_client_driver.py  test_bulletin_scripts.py  test_email.py  test_exception.py  test_main.py  test_messaging.py  test_packets.py  test_plugin.py  test_utils.py
tests/client/: test_aprsis.py  test_client.py  test_client_base.py  test_factory.py  test_registry.py
tests/client/drivers/: test_aprsis_driver.py  test_fake_driver.py  test_kiss_common.py  test_tcpkiss_driver.py
tests/cmds/: test_dev.py  test_sample_config.py  test_send_message.py  test_webchat.py
tests/packets/: test_ack_packet.py  test_beacon_packet.py  test_bulletin_packet.py  test_collector.py  test_filter.py  test_gps_packet.py  test_log.py  test_message_packet.py  test_mice_packet.py  test_object_packet.py  test_packet.py  test_packet_list.py  test_reject_packet.py  test_seen_list.py  test_status_packet.py  test_telemetry_packet.py  test_thirdparty_packet.py  test_tracker.py  test_unknown_packet.py  test_watch_list.py  test_weather_packet.py
tests/packets/filters/: test_dupe_filter.py  test_packet_type.py
tests/plugins/: test_fortune.py  test_location.py  test_notify.py  test_package.py  test_ping.py  test_query.py  test_time.py  test_version.py  test_weather.py
tests/stats/: test_app.py  test_collector.py
tests/threads/: test_aprsd_thread.py  test_rx.py  test_service.py  test_stats.py  test_tx.py
tests/utils/: test_counter.py  test_fuzzyclock.py  test_json.py  test_keepalive_collector.py  test_objectstore.py  test_ring_buffer.py  test_ring_buffer_additional.py  test_trace.py  test_utils.py
tools/: bulletin-aprschat.sh
(+4 files in other folders)
