[metadata]
name = aprsd
summary = Amateur radio APRS daemon which listens for messages and responds
description-file =
    README.rst
long-description-content-type = text/x-rst; charset=UTF-8
author = Craig Lamparter
author-email = something@somewhere.com
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aprsd

[entry_points]
console_scripts =
    aprsd = aprsd.main:main
    fake_aprs = aprsd.fake_aprs:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
