[metadata]
name = aprsd
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Craig Lamparter
author_email = something@somewhere.com
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python
description_file =
    README.rst
summary = Amateur radio APRS daemon which listens for messages and responds

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aprsd

[entry_points]
console_scripts =
    aprsd = aprsd.main:main
    fake_aprs = aprsd.fake_aprs:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
