[metadata]
name = aprsd
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://aprsd.readthedocs.org
author = Craig Lamparter
author_email = something@somewhere.com
license = Apache
license_file = LICENSE
classifier =
    License :: OSI Approved :: Apache Software License
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
project_urls =
    Source=https://github.com/craigerl/aprsd
    Tracker=https://github.com/craigerl/aprsd/issues
summary = Amateur radio APRS daemon which listens for messages and responds

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aprsd

[entry_points]
console_scripts =
    aprsd = aprsd.aprsd:main
oslo.config.opts =
    aprsd.conf = aprsd.conf.opts:list_opts
oslo.config.opts.defaults =
    aprsd.conf = aprsd.conf:set_lib_defaults

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build

[bdist_wheel]
universal = 1
